--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ psycopg2 = "*"
 psycopg2-binary = "*"
 django-extensions = "*"
 gunicorn = "*"
+django-heroku = "*"
 
 [requires]
 python_version = "3.7"
